--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://thelazydevops.xyz"
-title = "The Lazy Devops Engineer"
+title = "The Lazy Devops Conjurer"
 
 theme = "hugo-coder"
 
