--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://thelazydevops.xyz"
+baseURL = "https://www.thelazydevops.xyz"
 title   = "Voislav Vasiljevski"
 
 DefaultContentLanguage = "en"
