config changes menu

--- a/config.toml
+++ b/config.toml
@@ -113,8 +113,8 @@ disableHugoGeneratorInject = false
   [[menu.main]]
     identifier = "about"
     name       = "About Me"
-    url        = "about/"
+    url        = "/about"
   [[menu.main]]
     identifier = "posts"
     name       = "Posts"
-    url        = "posts/"
+    url        = "/posts"
