--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ layoutDir    = "layouts"
 publishDir   = "public"
 
 buildDrafts  = false
-buildFuture  = false
+buildFuture  = true
 buildExpored = false
 canonifyURLs = true
 
