--- a/config.toml
+++ b/config.toml
@@ -100,7 +100,8 @@ disableHugoGeneratorInject = false
 
 [languages]
   [languages.en]
-    subtitle  = "Hello Friend NG Theme"
+    title = "Voislav Vasiljevski"
+    subtitle  = "The Lazy DevOps Blog"
     weight    = 1
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
 
