--- a/config.toml
+++ b/config.toml
@@ -61,7 +61,7 @@ disableHugoGeneratorInject = false
   homeSubtitle = "Google Search expert. Lazy-walking towards the DevOps world"
 
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
-  gitUrl = "https://gitlab.com/voioo/thelazydevops_xyz/commit/"
+  gitUrl = "https://github.com/voioo/personal-site/commits/master/"
 
   # Integrate Javascript files or stylesheets by adding the url to the external assets or by
   # linking local files with their path relative to the static folder, e.g. "css/styles.css"
@@ -91,8 +91,8 @@ disableHugoGeneratorInject = false
     url  = "mailto:voislav@voioo.cz"
 
   [[params.social]]
-    name = "gitlab"
-    url  = "https://gitlab.com/voioo"
+    name = "github"
+    url  = "https://github.com/voioo"
 
   [[params.social]]
     name = "linkedin"
