--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ enableRobotsTXT = true
 enableGitInfo   = true
 enableEmoji     = true
 enableMissingTranslationPlaceholders = false
-disableRSS     = false
+disableRSS     = true
 disableSitemap = false
 disable404     = false
 disableHugoGeneratorInject = false
